--- a/style.css
+++ b/style.css
@@ -1,31 +1,36 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 20px;
 }
 
 #resources {
-    background-color: #f1f1f1;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  text-align: left;
+}
+
+#version {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  text-align: left;
 }
 
 #actions {
-    margin-top: 50px;
-}
-
-button {
-    padding: 10px;
-    font-size: 16px;
+  margin-top: 50px;
 }
 
 #result {
-    margin-top: 10px;
+  margin-top: 20px;
+  font-weight: bold;
 }
 
 #newGameButton {
-    margin-right: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
-
