--- a/style.css
+++ b/style.css
@@ -2,14 +2,7 @@ body {
   text-align: center;
 }
 
-h1 {
-  margin-top: 20px;
-}
-
 #resources {
-  position: absolute;
-  top: 10px;
-  left: 10px;
   text-align: left;
 }
 
@@ -23,14 +16,14 @@ h1 {
 }
 
 #version {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   left: 10px;
   text-align: left;
 }
 
 #newGameButton {
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px;
 }
