--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
-body {
-  text-align: center;
-}
-
 #resources {
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px;
+  font-family: Arial, sans-serif;
 }
 
-#actions {
-  margin-top: 50px;
+.resource {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
 }
 
-#result {
-  margin-top: 20px;
+.resource span {
+  margin-right: 10px;
+}
+
+.resource .value {
   font-weight: bold;
 }
 
-#version {
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-  text-align: left;
-}
-
-#newGameButton {
-  position: fixed;
-  top: 10px;
-  right: 10px;
+.resource .icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  background-color: #e5e5e5;
+  border-radius: 50%;
 }
