--- a/style.css
+++ b/style.css
@@ -1,22 +1,32 @@
 #resources {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f2f2f2;
+  padding: 0 10px;
   font-family: Arial, sans-serif;
 }
 
-#resources div {
+.resource {
   display: flex;
   align-items: center;
-  margin-bottom: 5px;
+  margin-right: 10px;
 }
 
-#resources .value {
+.resource span {
   margin-left: 5px;
+}
+
+.resource .value {
   font-weight: bold;
 }
 
-#resources .icon {
+.resource .icon {
   width: 20px;
   height: 20px;
   margin-right: 5px;
