--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
+body {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+#container {
+  position: relative;
+  margin-top: 60px;
+}
+
 #resources {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 40px;
+  top: 10px;
+  left: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   background-color: #f2f2f2;
-  padding: 0 10px;
+  padding: 5px;
+  border-radius: 5px;
   font-family: Arial, sans-serif;
 }
 
@@ -32,4 +41,30 @@
   margin-right: 5px;
   background-color: #e5e5e5;
   border-radius: 50%;
+}
+
+#actions {
+  margin-top: 20px;
+}
+
+.action-button {
+  margin-right: 10px;
+}
+
+#result {
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+#version {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  text-align: left;
+}
+
+#newGameButton {
+  position: fixed;
+  top: 10px;
+  right: 10px;
 }
