--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
 
 #container {
   position: relative;
-  margin-top: 0;
-  padding-top: 60px; /* Update this line */
+  margin-top: 60px;
 }
 
 #resources {
@@ -50,11 +49,12 @@ body {
 }
 
 #actions {
-  margin-top: 0; /* Reset the margin-top value */
+  margin-top: 0;
 }
 
 .action-button {
   margin-right: 10px;
+  margin-top: 60px; /* Add this line */
 }
 
 #result {
