--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 .action-button {
   margin-right: 10px;
-  margin-top: 60px; /* Add this line */
+  padding-top: 60px; /* Add this line */
 }
 
 #result {
