--- a/style.css
+++ b/style.css
@@ -52,11 +52,14 @@ body {
 
 #actions {
   margin-top: 60px;
+  display: flex;
+  justify-content: center; /* Add this line */
+  flex-wrap: wrap; /* Add this line */
 }
 
 .action-button {
   margin-right: 10px;
-  padding-top: 60px;
+  margin-bottom: 10px; /* Adjust this value for vertical spacing */
 }
 
 #result {
