--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ body {
 
 #version {
   position: fixed;
-  bottom: 10px;
-  left: 10px;
+  top: 10px;
+  right: 130px; /* Adjust the right value as needed */
   text-align: left;
 }
 
