--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
   top: 10px;
   left: 10px;
   display: flex;
-  flex-direction: column; /* Add this line */
-  align-items: flex-start; /* Add this line */
+  flex-direction: column;
+  align-items: flex-start;
   background-color: #f2f2f2;
   padding: 5px;
   border-radius: 5px;
@@ -27,7 +27,7 @@ body {
   display: flex;
   align-items: center;
   margin-right: 10px;
-  margin-bottom: 5px; /* Add this line */
+  margin-bottom: 5px;
 }
 
 .resource span {
@@ -54,14 +54,17 @@ body {
   margin-top: 60px;
   padding: 65px;
   display: flex;
-  /*justify-content: center; /* Add this line */
-  flex-wrap: wrap; /* Add this line */
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .action-button {
-  margin-right: 20px;
-  margin-bottom: 10px; /* Adjust this value for vertical spacing */
-  flex-grow: 1; /* Add this line */
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.action-button:last-child {
+  margin-right: 0;
 }
 
 #result {
@@ -72,7 +75,7 @@ body {
 #version {
   position: fixed;
   top: 10px;
-  right: 10px; /* Adjust the right value as needed */
+  right: 10px;
   text-align: left;
 }
 
