--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
 
 #container {
   position: relative;
-  margin-top: 60px;
+  margin-top: 0; /* Set margin-top to 0 */
 }
 
 #resources {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 0; /* Set top to 0 */
+  left: 0; /* Set left to 0 */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -46,8 +46,8 @@ body {
   border-radius: 50%;
 }
 
-#timer {
-  margin-top: 10px;
+#spacer {
+  height: 100px;
 }
 
 #actions {
@@ -60,6 +60,7 @@ body {
 }
 
 .action-button {
+  margin-right: 10px;
   margin-bottom: 10px;
 }
 
