--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
 
 #container {
   position: relative;
-  margin-top: 0; /* Set margin-top to 0 */
+  margin-top: 0;
 }
 
 #resources {
   position: absolute;
-  top: 0; /* Set top to 0 */
-  left: 0; /* Set left to 0 */
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -21,7 +21,7 @@ body {
   border-radius: 5px;
   font-family: Arial, sans-serif;
   z-index: 1;
-  margin-top: 0; /* Add this line */
+  margin-top: 0;
 }
 
 .resource {
@@ -57,7 +57,7 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 10px; /* Add this line */
+  gap: 10px;
 }
 
 .action-button {
@@ -73,8 +73,9 @@ body {
 #version {
   position: fixed;
   top: 10px;
-  right: 10px;
+  left: 10px;
   text-align: left;
+  margin-top: 0; /* Add this line */
 }
 
 #newGameButton {
