--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
 
 #resources {
   position: absolute;
-  top: 0;
-  left: 0;
+  margin-top: 10px;
+  margin-left: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
