--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body {
   margin-bottom: 10px; /* Add a bottom margin for spacing */
 }
 
+#timer {
+  text-align: center;
+}
+
 #spacer {
   height: 100px;
 }
