--- a/style.css
+++ b/style.css
@@ -47,9 +47,8 @@ body {
 
 #timer {
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%);
   margin-top: 20px; /* Adjust the top margin as needed */
   font-size: 24px; /* Adjust the font size as needed */
   text-align: center;
