--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body {
 
 #timer {
   position: absolute;
+  bottom: 10%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
   margin-top: 20px; /* Adjust the top margin as needed */
   font-size: 24px; /* Adjust the font size as needed */
   text-align: center;
