--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   position: absolute;
   bottom: 10%;
   left: 50%;
-  transform: translate(-50%, -10%);
+  transform: translate(-50%);
   font-size: 18px; /* Adjust the font size as needed */
   text-align: center;
 }
