--- a/style.css
+++ b/style.css
@@ -45,9 +45,13 @@ body {
   margin-bottom: 10px; /* Add a bottom margin for spacing */
 }
 
+#energy {
+  margin-bottom: 10px; /* Add a bottom margin for spacing */
+}
+
 #timer {
   position: absolute;
-  bottom: 1%;
+  bottom: 0;
   left: 50%;
   transform: translate(-50%);
   font-size: 18px; /* Adjust the font size as needed */
