--- a/style.css
+++ b/style.css
@@ -52,9 +52,10 @@ body {
 #timer {
   position: absolute;
   bottom: 0;
-  left: 20%;
-  transform: translate(-20%);
+  left: 50%;
+  transform: translate(-50%);
   font-size: 14px; /* Adjust the font size as needed */
+  font-color: red;
   text-align: center;
 }
 
