--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ body {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%);
-  font-size: 14px; /* Adjust the font size as needed */
-  font-color: red;
+  transform: translateX(-50%);
+  font-size: 14px;
+  color: red;
   text-align: center;
 }
 
