--- a/style.css
+++ b/style.css
@@ -94,3 +94,11 @@ body {
   top: 35px;
   right: 10px;
 }
+
+.message {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+}
