--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ body {
 }
 
 #food {
-  margin-bottom: 10px; /* Add a bottom margin for spacing */
+  margin-bottom: 10px;
 }
 
 #energy {
-  margin-bottom: 10px; /* Add a bottom margin for spacing */
+  margin-bottom: 10px;
 }
 
 #timer {
@@ -77,7 +77,7 @@ body {
   margin-bottom: 10px;
 }
 
-.Result {
+#result {
   background-color: #f3f3f3;
   padding: 10px;
   margin-bottom: 10px;
@@ -86,7 +86,7 @@ body {
   font-weight: bold;
 }
 
-.Result .rng {
+#result .rng {
   color: #FFF;
   background-color: #808080;
   padding: 2px 4px;
