--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
   border-radius: 5px;
   overflow-wrap: break-word;
   font-weight: bold;
+  background-color: #808080;
 }
 
 #result .rng {
