--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: #f2f2f2;
+  background-color: #808080;
   padding: 5px;
   border-radius: 5px;
   font-family: Arial, sans-serif;
