--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
 
 #result {
   padding: 10px;
+  display: inline-block;
   margin-bottom: 10px;
   border-radius: 5px;
   overflow-wrap: break-word;
