--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: #f2f2f2;
+  background-color: #808080;
   padding: 5px;
   border-radius: 5px;
   font-family: Arial, sans-serif;
@@ -42,20 +42,20 @@ body {
 }
 
 #food {
-  margin-bottom: 10px; /* Add a bottom margin for spacing */
+  margin-bottom: 10px;
 }
 
 #energy {
-  margin-bottom: 10px; /* Add a bottom margin for spacing */
+  margin-bottom: 10px;
 }
 
 #timer {
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translate(-50%);
-  font-size: 14px; /* Adjust the font size as needed */
-  font-color: red;
+  transform: translateX(-50%);
+  font-size: 14px;
+  color: red;
   text-align: center;
 }
 
@@ -78,9 +78,42 @@ body {
 }
 
 #result {
-  margin-top: 20px;
+  padding: 10px;
+  display: inline-block;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  overflow-wrap: break-word;
   font-weight: bold;
 }
+
+#result.show {
+  background-color: #808080;
+}
+
+#result .rng {
+  color: #FFF;
+  background-color: #008000;
+  padding: 2px 4px;
+  border-radius: 3px;
+  font-weight: bold;
+}
+
+#result .excess-rng {
+  color: #FFF;
+  background-color: #ff0000;
+  padding: 2px 4px;
+  border-radius: 3px;
+  font-weight: bold;
+}
+
+#result .max-value {
+  color: #FFF;
+  background-color: #000000;
+  padding: 2px 4px;
+  border-radius: 3px;
+  font-weight: bold;
+}
+
 
 #version {
   position: fixed;
