--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   background-color: #808080;
   padding: 5px;
   border-radius: 5px;
-  font-family: Arial, sans-serif;
+  font-family: 'CustomFont', Arial, sans-serif;
   z-index: 1;
 }
 
