--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
+  font-family: 'CustomFont', Arial, sans-serif;
 }
 
 #resources {
@@ -18,7 +19,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   background-color: #808080;
-  padding: 5px;
+  padding: 10px;
   border-radius: 5px;
   font-family: 'CustomFont', Arial, sans-serif;
   z-index: 1;
