--- a/style.css
+++ b/style.css
@@ -58,10 +58,11 @@ body {
 
 #timer {
   position: absolute;
-  bottom: 15px;
+  bottom: 12.5px;
   left: 50%;
   transform: translateX(-50%);
   font-size: 16px;
+  background-color: #000000;
   color: red;
   text-align: center;
 }
