--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ body {
   transform: translateX(-50%);
   font-size: 16px;
   background-color: #000000;
+  padding: 2px 4px;
+  border-radius: 3px;
   color: red;
   text-align: center;
 }
