--- a/style.css
+++ b/style.css
@@ -139,3 +139,11 @@ body {
   top: 35px;
   right: 10px;
 }
+
+#playerName {
+  position: fixed;
+  top: 50px;
+  right: 10px;
+  text-align: right;
+}
+
