--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #resources {
   position: absolute;
   top: 20px;
-  margin-left: 20px;
+  right: 20px; /* Changed margin-left to right */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -142,8 +142,7 @@ body {
 
 #playerName {
   position: fixed;
-  top: 65px;
+  top: 10px; /* Adjusted position */
   right: 15px;
   text-align: right;
 }
-
