--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #resources {
   position: absolute;
   top: 20px;
-  right: 20px; /* Changed margin-left to right */
+  left: 20px; /* Changed margin-left to left */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
