--- a/style.css
+++ b/style.css
@@ -146,12 +146,13 @@ body {
   right: 0;
 }
 
-#resultContainer.show {
+.resultContainer.show {
   background-color: #808080;
 }
 
-#resultContainer {
+.resultContainer {
   display: none;
   background-color: #808080;
 }
+
 
