--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body {
 }
 
 #resultContainer {
-  display: none;
+  display: block;
   background-color: #808080;
 }
 
@@ -162,6 +162,7 @@ body {
 .result-displayed {
   background-color: gray;
 }
+
 
 
 
